--- a/Tex/bibliography.tex
+++ b/Tex/bibliography.tex
@@ -71,6 +71,12 @@
   MicroBooNE Doc-DB-5851
   \url{http://microboone-docdb.fnal.gov:8080/cgi-bin/RetrieveFile?docid=5851&filename=cc-incl-neutrino2016-v2.7.pdf&version=9}
 
+  \bibitem{OPERApaper}
+  N.~Agafonova {\it et al.} [OPERA Collaboration],
+  %``Momentum measurement by the Multiple Coulomb Scattering method in the OPERA lead emulsion target,''
+  New J.\ Phys.\  {\bf 14}, 013026 (2012)
+  doi:10.1088/1367-2630/14/1/013026
+  [arXiv:1106.6211 [physics.ins-det]].
 
 
 \end{thebibliography}
