--- a/main.tex
+++ b/main.tex
@@ -31,8 +31,10 @@
 \clearpage
 \input{./Tex/global_vars.tex}
 
-\section{Note Content Overview}
-This is a technote internal to the MicroBooNE collaboration quantifying the performance of the multiple coulomb scattering (MCS) based momentum estimation technique. The message of this note is that MCS is an important technique for LArTPCs measuring neutrino interactions, and we have demonstrated the MCS technique works and we have quantified its performance both on simulation and data. Ideally this analysis will lead to a publication in a journal like JINST. A list of potential plots to be included in the publication can be found at the end of this note, in Section \ref{publicplots_section}. From those plots one can infer the  scope of the publication.\\
+\section{Note Message and Content Overview}
+This is a technote internal to the MicroBooNE collaboration quantifying the performance of the multiple coulomb scattering (MCS) based momentum estimation technique. The message of this note is that MCS is an important technique for LArTPCs measuring neutrino interactions, and we have demonstrated the MCS technique works and we have quantified its performance both on simulation and data. This note is a demonstration of performance but is not an end-all inclusive study on the algorithm and subsequently has limited scope. At the end of this note are some suggestions for future analyses which have not been done yet.\\
+
+Ideally this analysis will lead to a publication in a journal like JINST, which will also have a limited scope. A list of potential plots to be included in the publication can be found at the end of this note, in Section \ref{publicplots_section}. From those plots one can infer the scope of the publication.\\
 
 In general the structure of this note is as follows:
 \begin{enumerate}
@@ -44,7 +46,7 @@ In general the structure of this note is as follows:
 	\item The purpose of demonstrating that the technique works with {\sc MCTracks} (which come from true {\sc GEANT4} energy depositions in the detector) is to serve as a ``best-case'' baseline before reconstruction effects are convolved. 
 	\item The purpose of demonstrating that this technique works with automatically reconstructed tracks is to get one step closer towards a data/MC comparison.
 \end{itemize}
-This input sample is also used in additional studies including optimizing the segment length used in the algorithm, optimizing the additional constant resolution term used in the algorithm, as well as a potential additional use for the technique: determining track directionality. These studies can be found in the appendices.
+This input sample is also used in additional studies including optimizing the segment length used in the algorithm, optimizing the additional constant resolution term used in the algorithm, studying the algorithm performance as a function of track angle, as well as a potential additional use for the technique: determining track directionality. These studies can be found in the appendices.
 \item Demonstration of this method on automatically-selected well-reconstructed neutrino events in the full MicroBooNE BNB + cosmics simulation. The purpose of this section is to take another step towards working with real automatically-selected BNB data. This section describes particle mis-identification (MID) rates, MCS PID capabilities, and other things that the previous (truth-based selection) section does not.
 \item Demonstration of this method on automatically-selected real neutrino events in actual MicroBooNE BNB data. In order to ensure the tracks are well-reconstructed and to mitigate MIDs, a handscanning effort is used and is described in this section.
 \item A conclusion section reiterating the usefulness of the tool, describing the outlook of the algorithm and potential additional studies that could be done, along with a list of plots that might be good to put in a potential publication derived from this note.
