incorporating edits from xsec group reviewers including leonidas, matt bass... working towards v1.4

--- a/Tex/MC_selected_neutrino_performance.tex
+++ b/Tex/MC_selected_neutrino_performance.tex
@@ -36,7 +36,7 @@ After these additional cuts are placed, 1613 events (tracks) remain for MCS anal
 
 
 \subsection{MCS Momentum Validation}\label{MCS_Momentum_Validation_MCBNBSelectedRecoTrack_section}
-The MCS momentum versus range-based momentum without any cuts other than those described in Section \ref{MC_BNB_eventselection_section} can be seen in Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_noPDGcut_fig}. The off-diagonal component visible in this figure (where MCS momentum overestimates range momentum) is caused primarily by MIDs, most commonly where the longest track is a proton. Note that there are no ``broken tracks'' (which is another not-yet-discussed possible explanation for the off-diagonal component) because of the track-{\sc MCTrack} matching requirement described in Section \ref{MC_BNB_eventselection_section}. Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_withPDGcuts_fig} divides Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_noPDGcut_fig} into those events in which the MCTrack matched to the reconstructed track is a proton, a pion, or a muon. From this figure it is clear comparing MCS momentum to range momentum for contained tracks will provide a handle on separating muon tracks from proton tracks in data (though it is hard to make similar conclusions about pions due to limited statistics in this study).\\
+The MCS momentum versus range-based momentum without any cuts other than those described in Section \ref{MC_BNB_eventselection_section} can be seen in Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_noPDGcut_fig}. The off-diagonal component visible in this figure (where MCS momentum overestimates range momentum) is caused primarily by MIDs, most commonly where the longest track is a proton. Those familiar with this analysis may see the off diagonal component and associate it with ``broken tracks'' (tracks which are reconstructed as starting in the correct place but stopping prematurely, thus having a range-based momentum which disagrees with the true momentum), but note that there are no ``broken tracks'' in this figure because of the track-{\sc MCTrack} matching requirement described in Section \ref{MC_BNB_eventselection_section}. Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_withPDGcuts_fig} divides Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_noPDGcut_fig} into those events in which the MCTrack matched to the reconstructed track is a proton, a pion, or a muon. From this figure it is clear comparing MCS momentum to range momentum for contained tracks will provide a handle on separating muon tracks from proton tracks in data (though it is hard to make similar conclusions about pions due to limited statistics in this study).\\
 
 The bias and resolution for the MCS momentum estimation method on this sample is computed in the same way as described in previous sections (for example in Section \ref{MCS_Momentum_Validation_MCBNBRecoTrack_section}). Note that only those events in which the reconstructed track corresponds to a muon in truth (Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_muononly_fig}) are used to compute bias and resolutions. The bias and resolution for this momentum reconstruction method is shown in Figure \ref{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_fig}. This figure indicates a bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 10\% for contained tracks with true total momentum around 0.5 GeV (which corresponds to a length of about 1.7 meters) to below 7\% for contained tracks with true total momentum greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This agrees well with the analogous plots created from simulated single muons with reconstructed tracks (Figure \ref{MCS_range_bias_resolution_MCBNBRecoTrack_fig}).
 
