--- a/Tex/bibliography.tex
+++ b/Tex/bibliography.tex
@@ -23,7 +23,35 @@
   Some Practical Remarks on Multiple Scattering, 
   Nucl.\ Instrum.\ Methods\ {\bf 129} (1975)
   104-120.
+
+  \bibitem{highland-lynch-dahl}
+  G. R. Lynch and O. I. Dahl, Nucl.\ Instrum.\ Methods\, 
+  Section B (Beam Interactions with Materials and Atoms) {\bf B58, 6} (1991). 
+
+
+ \bibitem{DONUT_paper} 
+  K.~Kodama {\it et al.} [DONUT Collaboration],
+  %``Observation of tau neutrino interactions,''
+  Phys.\ Lett.\ B {\bf 504}, 218 (2001)
+  doi:10.1016/S0370-2693(01)00307-0
+  [hep-ex/0012035].
+
+    \bibitem{OPERA_paper}
+  N.~Agafonova {\it et al.} [OPERA Collaboration],
+  %``Momentum measurement by the Multiple Coulomb Scattering method in the OPERA lead emulsion target,''
+  New J.\ Phys.\  {\bf 14}, 013026 (2012)
+  doi:10.1088/1367-2630/14/1/013026
+  [arXiv:1106.6211 [physics.ins-det]].
+
  
+  \bibitem{MACRO_paper} 
+  G.~Giacomelli [MACRO Collaboration],
+  %``Neutrino physics and astrophysics with the MACRO experiment at the Gran Sasso lab,''
+  Braz.\ J.\ Phys.\  {\bf 33}, 211 (2003)
+  doi:10.1590/S0103-97332003000200008
+  [hep-ex/0210006].
+
+
   \bibitem{icarus_mcs_paper}
   A.~Ankowski {\it et al.} [ICARUS Collaboration],
   ``Measurement of through-going particle momentum by means of multiple scattering with the ICARUS T600 TPC,''
@@ -71,12 +99,7 @@
   MicroBooNE Doc-DB-5851
   \url{http://microboone-docdb.fnal.gov:8080/cgi-bin/RetrieveFile?docid=5851&filename=cc-incl-neutrino2016-v2.7.pdf&version=9}
 
-  \bibitem{OPERApaper}
-  N.~Agafonova {\it et al.} [OPERA Collaboration],
-  %``Momentum measurement by the Multiple Coulomb Scattering method in the OPERA lead emulsion target,''
-  New J.\ Phys.\  {\bf 14}, 013026 (2012)
-  doi:10.1088/1367-2630/14/1/013026
-  [arXiv:1106.6211 [physics.ins-det]].
+
 
 
 \end{thebibliography}
