--- a/Tex/data_performance.tex
+++ b/Tex/data_performance.tex
@@ -52,10 +52,10 @@ The bias and resolution for this momentum reconstruction method shown in Figure 
 \begin{figure}
 \centering
 \mbox{
-	\subfigure[\textit{The subset of events in Figure \ref{MCS_range_momentum_DataRecoTrack_nohandscan_fig} which were hand-scanned as having poor reconstruction quality or obvious MID topologies.}]
+	\subfigure[\textit{The subset of events in Figure \ref{MCS_range_momentum_DataRecoTrack_nohandscan_fig} which were hand-scanned as having poor reconstruction quality or having obvious MID topologies.}]
 	{\includegraphics[width=75mm]{Figures/MCS_range_momentum_DataRecoTracks_badhandscan.png}}
 	\quad
-	\subfigure[\textit{The subset of events in Figure \ref{MCS_range_momentum_DataRecoTrack_nohandscan_fig} which were hand-scanned as having good reconstruction quality or obvious MID topologies.}\label{MCS_range_momentum_DataRecoTrack_fig}\label{realdata_goodhandscan_fig}]
+	\subfigure[\textit{The subset of events in Figure \ref{MCS_range_momentum_DataRecoTrack_nohandscan_fig} which were hand-scanned as having good reconstruction quality or having obvious MID topologies.}\label{MCS_range_momentum_DataRecoTrack_fig}\label{realdata_goodhandscan_fig}]
 	{\includegraphics[width=75mm]{Figures/MCS_range_momentum_DataRecoTracks_goodhandscan.png}}
 	}
 \caption{\textit{MCS computed momentum versus range momentum for the selected neutrino-induced fully contained muon sample in data hand-scanned as having poorly reconstructed tracks (left) and well reconstructed tracks (right).}}
@@ -93,16 +93,16 @@ The bias and resolution for this momentum reconstruction method shown in Figure 
 
 
 \subsection{Highland Validation}\label{Highland_Validation_DataRecoTrack_section}
-For this sample of contained, selected, well-reconstructed neutrino-induced tracks in {\ub} data, the same Highland validation plot is created in exactly the same way as described in Section \ref{Highland_Validation_MCTrack_section}. For each consecutive pair of segments, the angular scatter in milliradians divided by the Highland expected RMS in millradians is an entry in the histogram shown in Figure \ref{Highland_validation_DataRecoTracks_fig}, both for the tracks hand scanned as being well reconstructed, and for the sample rejected by the hand scanner as being poorly reconstructed or obvious MID topologies. From this figure we can see that the Highland formula is valid for well reconstructed, contained muon tracks in data.
+For this sample of contained, selected, well-reconstructed neutrino-induced tracks in {\ub} data, the same Highland validation plot is created in exactly the same way as described in Section \ref{Highland_Validation_MCTrack_section}. For each consecutive pair of segments, the angular scatter in milliradians divided by the Highland expected RMS in millradians is an entry in the histogram shown in Figure \ref{Highland_validation_DataRecoTracks_fig}, both for the tracks hand scanned as being well reconstructed, and for the sample rejected by the hand scanner as being poorly reconstructed or having obvious MID topologies. From this figure we can see that the Highland formula is valid for well reconstructed, contained muon tracks in data.
 
 \begin{figure}
 \centering
 \mbox{
-	\subfigure[\textit{The {\ub} data sample handscanned as being well reconstructed.}]
-	{\includegraphics[width=75mm]{Figures/Highland_validation_DataBNBSelectedRecoTrack_goodscan.png}}
-	\quad
-	\subfigure[\textit{The {\ub} data sample handscanned as being poorly reconstructed or being a MID topology.}]
+	\subfigure[\textit{The {\ub} data sample handscanned as being poorly reconstructed.}]
 	{\includegraphics[width=75mm]{Figures/Highland_validation_DataBNBSelectedRecoTrack_badscan.png}}
+	\quad
+	\subfigure[\textit{The {\ub} data sample handscanned as being well reconstructed or being a MID topology.}]
+	{\includegraphics[width=75mm]{Figures/Highland_validation_DataBNBSelectedRecoTrack_goodscan.png}}
 	}
 \caption{\textit{10 cm segment angular deviations divided by expected Highland RMS for the sample of well reconstructed, neutrino induced muons in {\ub} data as well as for the sample deemed poorly reconstructed or MID topologies by the hand scanning.}}
 \label{Highland_validation_DataRecoTracks_fig}
