--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -23,13 +23,13 @@ Photomultiplier tubes (PMTs) and three wire planes with 3mm spacing at angles of
 
 The BNB is predominantly composed of muon neutrinos, which can undergo charge-current interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate the momentum with a measurement of the length of the particle's track. Around half of muons from BNB neutrino events in {\ub} are not fully contained in the TPC, and therefore using length-based calculations for these uncontained tracks is not a possibility. The only way to compute the energy of an outgoing three-dimensional track is by means of multiple coulomb scattering (MCS). \\
 
-The phenomenon of multiple coulomb scattering (MCS) occurs when a charged particle enters a medium and undergoes electromagnetic scattering with the atomic nuclei. This scattering deviates the original trajectory of the particle within the material (Figure \ref{mcs_nocap_fig}). For a given energy, the scatters of a track-like particle (in terms of angular deflection relative to the track direction) form a gaussian distribution centered at zero with a standard deviation given by the Highland formula \cite{highland}: 
+The phenomenon of multiple coulomb scattering (MCS) occurs when a charged particle enters a medium and undergoes electromagnetic scattering with the atomic nuclei. This scattering deviates the original trajectory of the particle within the material (Figure \ref{mcs_nocap_fig}). For a given energy, the scatters of a track-like particle (in terms of angular deflection relative to the track direction) form a gaussian distribution centered at zero with a standard deviation given by the Highland-Lynch-Dahl formula \cite{highland}\cite{highland-lynch-dahl} (henceforth referred to as the Highland formula): 
 
 \begin{equation}
 	\sigma_o=\frac{13.6\  \text{MeV}}{p\beta c}z\sqrt{\frac{\ell}{X_0}}\Big[1+0.0038\text{ln}\Big(\frac{\ell}{X_0}\Big)\Big]
 \end{equation}\label{highland_eqtn}
 
-\noindent where $\beta$ is the ratio of the particle's velocity to the speed of light, $\ell$ is the distance traveled inside the material, $z$ is the magnitude of the charge of the particle, and $X_0$ is the radiation length of the target material (taken to be a constant 14 cm in liquid argon). With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric information. The method by which this is done is described in detail in Section \ref{MCS_technique_section} and was originally described for use in a LArTPC by the ICARUS collaboration\cite{icarus_mcs_paper} and for use in the \ub detector by Leonias Kalousis\cite{leonidas1}.
+\noindent where $\beta$ is the ratio of the particle's velocity to the speed of light, $\ell$ is the distance traveled inside the material, $z$ is the magnitude of the charge of the particle, and $X_0$ is the radiation length of the target material (taken to be a constant 14 cm in liquid argon). With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric information. The method by which this is done is described in detail in Section \ref{MCS_technique_section}. Within neutrino physics, past emulsion detectors like the DONUT \cite{DONUT_paper} and OPERA \cite{OPERA_paper} experiments have used MCS to determine particle momenta. Additionally, the MACRO \cite{MACRO_paper} experiment at Gran Sasso Laboratory utilized this technique as well. The original method for using MCS to determine particle momentum in a LArTPC involved using a Kalman Filter and was originally described by the ICARUS collaboration \cite{icarus_mcs_paper}, and the likelihood-based method described in this technote for use in the {\ub} detector was originally described by Leonidas Kalousis \cite{leonidas1}.
 
 \begin{figure}[ht!]
 \centering
