--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,7 @@
 \begin{document}
 \maketitle
 
-\abstract{Liquid Argon Time Projection Chambers (LArTPCs) are an important detector technology for the future of the neutrino physics community. This technology provides precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. The MicroBooNE experiment is a LArTPC at the Fermi National Accelerator laboratory with active volume dimensions of 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located in the Booster Neutrino Beamline (BNB) which has a peak neutrino energy of about 0.7 GeV. In this note, we discuss a technique of measuring a charged particle's momentum by means of multiple coulomb scattering (MCS), which does not require the full track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). In this note we provide motivation for why this technique is important, demonstrate and quantify its performance on fully contained neutrino-induced muon tracks both in simulation and in data. In general we find good agreement between data and simulation, with small bias in the momentum reconstruction and with resolutions that vary as a function of track length, decreasing from about 12\% for the shortest (one meter long) tracks when scattering deviations over 10 centimeter segments are used in the MCS algorithm. This technote also describes other uses for multiple coulomb scattering besides momentum reconstruction, including identification of poorly reconstructed tracks, determination of track direction, and particle identification.}
+\abstract{Liquid Argon Time Projection Chambers (LArTPCs) are an important detector technology for the future of the neutrino physics community. This technology provides precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. The MicroBooNE experiment is a LArTPC at the Fermi National Accelerator laboratory with active volume dimensions of 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located in the Booster Neutrino Beamline (BNB) which has a peak neutrino energy of about 0.7 GeV. In this note, we discuss a technique of measuring a charged particle's momentum by means of Multiple Coulomb Scattering (MCS), which does not require the full track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). In this note we provide motivation for why this technique is important, demonstrate and quantify its performance on fully contained neutrino-induced muon tracks both in simulation and in data. In general we find good agreement between data and simulation, with small bias in the momentum reconstruction and with resolutions that vary as a function of track length, decreasing from about 12\% for the shortest (one meter long) tracks when scattering deviations over 10 centimeter segments are used in the MCS algorithm. This technote also describes other uses for multiple coulomb scattering besides momentum reconstruction, including identification of poorly reconstructed tracks, determination of track direction, and particle identification.}
 
 \clearpage
 \tableofcontents
@@ -32,13 +32,13 @@
 \input{./Tex/global_vars.tex}
 
 \section{Note Message and Content Overview}
-This is a technote internal to the MicroBooNE collaboration quantifying the performance of the multiple coulomb scattering (MCS) based momentum estimation technique. The message of this note is that MCS is an important technique for LArTPCs measuring neutrino interactions, and we have demonstrated the MCS technique works and we have quantified its performance both on simulation and data. This note is a demonstration of performance but is not an end-all inclusive study on the algorithm and subsequently has limited scope. At the end of this note are some suggestions for future analyses which have not been done yet.\\
+This is a technote internal to the MicroBooNE collaboration quantifying the performance of the Multiple Coulomb Scattering (MCS) based momentum estimation technique. The message of this note is that MCS is an important technique for LArTPCs measuring neutrino interactions, and we have demonstrated the MCS technique works and we have quantified its performance both on simulation and data. This note is a demonstration of performance but is not an end-all inclusive study on the algorithm and subsequently has limited scope. At the end of this note are some suggestions for future analyses which have not been done yet. \textit{The message of this note is simply ``MicroBooNE has demonstrated that it's likelihood-based MCS method for measuring muon momenta works specifically on contained tracks from BNB neutrinos. We describe how the method works, and we quantify how well it works.''}\\
 
-Ideally this analysis will lead to a publication in a journal like JINST, which will also have a limited scope. A list of potential plots to be included in the publication can be found at the end of this note, in Section \ref{publicplots_section}. From those plots one can infer the scope of the publication.\\
+Ideally this analysis will lead to a publication in a journal like JINST, which will also have a limited scope. A list of potential plots to be included in the publication can be found at the end of this note, in Section \ref{publicplots_section}.\\
 
 In general the structure of this note is as follows:
 \begin{enumerate}
-\item An introduction to the MicroBooNE detector, and motivation for the multiple coulomb scattering method for this experiment and within the future LArTPC community.
+\item An introduction to the MicroBooNE detector, and motivation for the MCS method for this experiment and within the future LArTPC community.
 \item A detailed description of how the actual method works.
 % \item Demonstration of this method on single muon {\sc MCTracks}. The purpose of this is to demonstrate that the technique works with the least obfuscated input.
 \item Demonstration of this method on a high-statistics sample of truth-selected muons from simulated numu charged-current interactions. This sample is relevant because the muons have the momentum and angle spectra that one would expect in MicroBooNE from the BNB. MCS performance is demonstrated both for {\sc MCTracks} in this sample, and well-reconstructed pandoraNuPMA tracks. 
